syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resourcespb";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/commonpb/common.proto";

package dev.multy.resources;

message CreatePublicIpRequest {
  PublicIpArgs resource = 1;
}

message ReadPublicIpRequest {
  string resource_id = 1;
}

message UpdatePublicIpRequest {
  string resource_id = 1;
  PublicIpArgs resource = 2;
}

message DeletePublicIpRequest {
  string resource_id = 1;
}

message PublicIpArgs {
  common.ResourceCommonArgs common_parameters = 1;
  string name = 2;
  string network_interface_id = 3;
}

message PublicIpResource {
  common.CommonResourceParameters common_parameters = 1;
  string name = 2;
  string network_interface_id = 3;
}
